--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+.center-align{
+    text-align: center;
+    background-color: hotpink;
+}
+.for-the-rest{
+    background-color: bisque;
+}
+.input-style{
+    background-color: #224957;
+    color: aliceblue;
+}
+.btn-info{
+    background-color: #A0E6D5;
+    font-weight: 700;
+}
