--- a/src/app/component/forgot-password/forgot-password.component.html
+++ b/src/app/component/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row" style="margin-top: 172px;">
         <div class="col-12">
             <div class="card shadow">
@@ -23,4 +23,27 @@
         </div>
         <div class="col"></div>
     </div>
+</div> -->
+<div class="container-fluid" style="background-image: url('assets/login_background.png'); background-size: cover; height: 100vh; display: flex; align-items: center; justify-content: center;">
+
+    <div class="card shadow" style="width: 345px; background-color: aliceblue;">
+        <div class="card-body">
+            <form>
+                <div class="mb-3 text-center">
+                    <h4 class="text-dark text-muted" style="font-weight: 700;">Forgot Password</h4>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control input-style" name="email" [(ngModel)]="email">
+                </div>
+                <button type="button" class="btn btn-info btn-block" (click)="forgotPassword()">Send Link</button>
+                <div class="row mt-2">
+                    <div class="col-md-12 text-center">
+                        <span style="font-size: 12px;font-weight: 700;">Have an account...</span> <a href="/login" style="text-decoration: none; color:blue;font-size: 12px;font-weight: 700;"><span >Login</span></a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </div>
