--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col-12 center-align" style="text-align: center;">
             <img src="assets\login_image.png" />
@@ -42,11 +42,43 @@
                                 </div>
                             </a>
                         </div> -->
-                    </form>
+                    <!-- </form>
                 </div>
             </div>
         </div>
         </div>
     </div>
   
+</div> --> 
+<div class="container-fluid" style="background-image: url('assets/login_background.png'); background-size: cover; height: 100vh; display: flex; align-items: center; justify-content: center;">
+
+    <div class="card shadow" style="width: 345px; background-color: aliceblue;">
+        <div class="card-body">
+            <form>
+                <div class="mb-3 text-center">
+                    <h4 class="text-dark text-muted" style="font-weight: 700;">Login</h4>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control input-style" name="email" [(ngModel)]="email">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control input-style" name="password" [(ngModel)]="password">
+                    
+                </div>
+                <div *ngIf="auth.errormessage" id="message" class="error-message text-danger">{{ auth.errormessage }}</div>
+                <button type="button" class="btn btn-info btn-block" (click)="login()">Login</button>
+                <div class="row mt-2" style="flex-direction: row;">
+                    <div class="col-md-12">
+                        <a href="/forgot-password" class="text-dark" style="text-decoration: none; font-size: 12px;font-weight: 700;"> Forgot Password ? </a>
+                    </div>
+                    <div class="col-md-12 text-right">
+                        <span style="font-size: 12px;font-weight: 700;">Don't have an account...</span> <a href="/register" style="text-decoration: none; color:blue;font-size: 12px;font-weight: 700;">Sign Up</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </div>
